--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<!-- COPYRIGHT NOTICE-->
 <head>
 	<title>SIMPLE BRANCH CHANGE</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
