adding conflicting merge changes for git example.

--- a/simple.html
+++ b/simple.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
 <!-- COPYRIGHT NOTICE-->
+MERGE BRANCH 123
 <head>
-	<title>SIMPLE BRANCH CHANGE 123</title>
+	<title>A very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
 			padding-top: 50px;
-			padding-bottom: 20px;
+			padding-bottom: 10px;
 		}
 	</style>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -16,7 +17,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I mnot sure why 
+			it will be nice
 		</p>
 	</main>
 	<footer class="container">
